--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-use-measure": "^2.1.1"
   },
   "devDependencies": {
     "@iconify/tailwind": "^0.1.4",
