--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,7 +19,11 @@
     "react-card-flip": "^1.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "slick-slider": "^1.8.2",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@iconify/tailwind": "^0.1.4",
