--- a/Admin/package.json
+++ b/Admin/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.22.2",
     "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
