--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,9 +22,8 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.16.0",
-    "react-use-measure": "^2.1.1"
-    "react-router-dom": "^6.16.0",
     "react-slick": "^0.30.2",
+    "react-use-measure": "^2.1.1",
     "slick-carousel": "^1.8.1",
     "slick-slider": "^1.8.2",
     "swiper": "^11.0.7"
