--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.2",
+    "@studio-freight/lenis": "^1.0.42",
+    "@studio-freight/react-lenis": "^0.0.46",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.20",
     "react": "^18.2.0",
@@ -22,8 +24,8 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.16.0",
-    "react-use-measure": "^2.1.1",
     "react-slick": "^0.30.2",
+    "react-use-measure": "^2.1.1",
     "slick-carousel": "^1.8.1",
     "slick-slider": "^1.8.2",
     "swiper": "^11.0.7"
