--- a/Admin/package.json
+++ b/Admin/package.json
@@ -25,6 +25,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
