--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "react-card-flip": "^1.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-lazy-load": "^4.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.30.2",
