--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,8 +1,11 @@
-{ 
-    "version": 2, 
-    "rewrites": [
-        { "source": "/(.*)",
-            "destination": "/api" }
-    ] 
 
-}
+{
+    "version": 2,
+    "name": "music-album",
+    "builds": [
+       { "src": "index.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+       { "src": "/(.*)", "dest": "/index.js" }
+    ]
+ }
