--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -6,6 +6,6 @@
        { "src": "index.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "/index.js" }
+       { "src": "/(.*)", "dest": "/" }
     ]
  }
