--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,7 +1,10 @@
 
 {
     "version": 2,
-    "routes": [
-       { "src": "/(.*)", "dest": "/" }
-    ]
+    "builds": [
+        {
+          "src": "Backend/index.js",
+          "use": "@vercel/node"
+        }
+      ]
  }
