--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -3,8 +3,14 @@
     "version": 2,
     "builds": [
         {
-          "src": "Backend/index.js",
+          "src": "*.js",
           "use": "@vercel/node"
+        }
+      ],
+      "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
         }
       ]
  }
