--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -3,7 +3,7 @@
     "version": 2,
     "builds": [
         {
-          "src": "*.js",
+          "src": "Backend/*.js",
           "use": "@vercel/node"
         }
       ],
